Clean up github repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 *.meta
 *.DS_Store
 Temp/
+Assembly-CSharp-Editor-firstpass.csproj
+Assembly-CSharp-Editor.csproj
+Assembly-CSharp-firstpass.csproj
+trooper2c.sln
+trooper2c.userprefs
