New logo; Add a look behind tip at the start of the game

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ Temp/
 *.csproj
 *.sln
 *.userprefs
+
+# DO NOT REMOVE! YOUR PASSWORD WILL GET CHECKED IN, IF YOU REMOVE THE LINE BELOW
+#**/LogglyCredential.cs
+# DO NOT REMOVE! YOUR PASSWORD WILL GET CHECKED IN, IF YOU REMOVE THE LINE ABOVE
